Fixed white gap (#1) + Added some color

--- a/base.css
+++ b/base.css
@@ -52,13 +52,13 @@ h1 {
   border-radius: 20px;
   /*transition: all .12s ease-in-out;* !*/
   transform: translate(0px, 0);
-  transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease-in-out;
 
   -webkit-transform: translate(0px, 0);
   -webkit-transition: -webkit-transform 0.2s ease-in-out;
 
   -moz-transform: translate(0px, 0);
-  -moz-transition: -moz-transform 0.2s ease;
+  -moz-transition: -moz-transform 0.2s ease-in-out;
 
   overflow: hidden;
 }
@@ -84,7 +84,7 @@ h1 {
   font-size: 1rem;
   display: flex;
   color: #383838;
-  line-height: 1;
+  line-height: 1.3;
 
   margin-left: 14%;
   margin-right: 12%;
@@ -108,48 +108,75 @@ h1 {
   background: white;
 }
 
-a.button {
-  border: 2px solid #383838;
+.button {
+  border: 2px solid #616161;
   border-radius: 30px;
 
   text-align: center;
-  color: #383838;
+  color: #616161;
   font-size: 1.1rem;
-  font-weight: bold;
+  /*font-weight: bold;*/
 
   width: 80%;
   position: absolute;
   bottom: 25px;
-  left: 10%;
+  right: 10%;
+
 
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
 
+  margin: 0px;
+
   -webkit-appearance: button;
   -moz-appearance: button;
   appearance: button;
-  display: inline;
+
+  /*display: inline;*/
   text-decoration: none;
+
+  backface-visibility: hidden;
 }
 .box:nth-child(1) .button {
-  background:  linear-gradient(225deg, white 35%, orange 60%, red);
-  background-size: 300% 100%;
-  background-position: bottom right;
-  transition:all 0.9s ease;
+  background: linear-gradient(225deg, white 22%, #FFC14F 35%, red);
+  background: linear-gradient(225deg, white 22%, #14b1a9 35%, #0b0bfd);
+  background-size: 450% 105%;
+  background-position: right top;
+  transition:all 0.7s ease;
 }
 
 .box:nth-child(2) .button {
-  background:  linear-gradient(225deg, white 35%, #14b1a9 60%, #1451b1);
-  background-size: 300% 100%;
-  background-position: bottom right;
+  background: linear-gradient(225deg, white 22%, #14b1a9 35%, #0b0bfd);
+  background: linear-gradient(225deg, white 22%, #F1AEFF 35%, #0054D5);
+  background-size: 450% 105%;
+  background-position: right top;
+  transition:all 0.7s ease;
+}
 
+.box:nth-child(3) .button {
+  background: linear-gradient(225deg, white 22%, #F1AEFF 35%, #0054D5);
+  background: linear-gradient(225deg, white 22%, #F1AEFF 35%, blue);
+  background-size: 450% 105%;
+  background-position: right top;
+  transition:all 0.7s ease;
+}
+
+.box:nth-child(4) .button {
+  background: linear-gradient(225deg, white 22%, #F1AEFF 35%, blue);
+  background-size: 450% 105%;
+  background-position: right top;
   transition:all 0.7s ease;
 }
 
 .box:hover .button {
-  background-position: bottom left;
-  color: black;
+  background-position: center center;
+  /*background-size:300% 100%;*/
 
+  color:black;
+  border-color: #383838;
+}
+.box:hover:nth-child(4) .button{
+  color: #FFFFFF ;
 }
 
 
@@ -240,7 +267,7 @@ a.button {
     -webkit-transform:scale(1.1);
     -moz-transform:scale(1.1);
     -ms-transform:scale(1.1);
-    overflow: hidden;
+    overflow: auto;
 
   }
 }
